// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overwriteRequestHeaders should append to the header when overwrite is false 1`] = `
Object {
  "x-apideck-app-id": "2222foo-bar-baz",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should insert the request headers variable with description, if key not found 1`] = `
Object {
  "add-a-header": "foo-bar-baz",
  "x-apideck-app-id": "2222",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should insert the request headers variable with true insert option, if key not found 1`] = `
Object {
  "add-a-header": "foo-bar-baz",
  "x-apideck-app-id": "2222",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should insert the request headers variable, if key not found 1`] = `
Object {
  "add-a-header": "foo-bar-baz",
  "x-apideck-app-id": "2222",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should overwrite the header variable with a blank value 1`] = `
Object {
  "x-apideck-app-id": "",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should overwrite the request headers variable 1`] = `
Object {
  "x-apideck-app-id": "foo-bar-baz",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should remove to the header when remove is true 1`] = `
Object {
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;

exports[`overwriteRequestHeaders should skip the request headers variable with false insert option, if key not found 1`] = `
Object {
  "x-apideck-app-id": "2222",
  "x-apideck-consumer-id": "test_consumer",
  "x-apideck-service-id": "salesforce",
}
`;
